Mejoras en manifest II

--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,14 @@
       "sizes": "1080x1920",
       "type": "image/png"
     }
+  ],
+  "launch_handler": {
+    "client_mode": "navigate-new"
+  },
+  "categories": ["business", "utilities"],
+  "scope_extensions": [
+    {
+      "origin": "https://github.com/fernandopizarrodw"
+    }
   ]
 }
